objects/Account_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Account__r.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Contacts</relationshipLabel>
        <relationshipName>Account_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Receiver Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collection Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Contacts</relationshipLabel>
        <relationshipName>Account_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Date and time that the Contact relationship was ended.</description>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Primary_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicates that the contact is the primary or default contact for the Account.</description>
        <label>Primary Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date and time that the Contact was linked to the Account.</description>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>Account Contact</label>
    <nameField>
        <displayFormat>AC-{00000}</displayFormat>
        <label>Account Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>